Fixed broken styles.

--- a/src/styles/components/pages/studentDashboard/studentViewRumblePage/studentClassList.scss
+++ b/src/styles/components/pages/studentDashboard/studentViewRumblePage/studentClassList.scss
@@ -12,7 +12,8 @@
     font-size: 1.6rem;
     margin-bottom: 10px;
   }
-  .section-content {
+  .section-content,
+  .rumble-list {
     @include scaling-flexbox;
     justify-content: space-betw;
     .rumble-item {
